# mayfly-helper

./: Cargo.toml  README.md
deploy/: install.sh  uninstall.sh
deploy/docker/: systemctl-shim.sh
deploy/sshd/: 90-mayfly.conf
deploy/systemd/: mayfly-helper.service
docs/: ADR-0008-privileged-helper-and-ipc.md  ADR-0009-extract-helper-repository.md  ADR-0011-peer-credential-authentication.md  helper-socket.json
src/: errors.rs  lib.rs  logging.rs  ops.rs  ops_tests.rs  peercred.rs  platform.rs  protocol.rs  security.rs  server.rs  server_tests.rs  shutdown.rs  sshd_control.rs
src/ssh/: mod.rs  sshd_config.rs  trusted_ca.rs
