[package]
name = "mayfly-helper"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Privileged root helper for Mayfly: performs the small, explicit set of host operations (TrustedUserCAKeys, sshd drop-in, sshd validate/reload) the unprivileged agent delegates over an authenticated Unix socket."
license = "Apache-2.0"
repository = "https://github.com/mayfly/mayfly-helper"
authors = ["Mayfly Authors"]
readme = "README.md"

[lib]
name = "mayfly_helper"
path = "src/lib.rs"

[[bin]]
name = "mayfly-helper"
path = "src/bin/mayfly-helper.rs"

# Hard dependency rules for this security product (mirrors mayfly-agent):
#   * Pure Rust only. No OpenSSL, no native-tls, no C TLS stack.
#   * Must build for x86_64, aarch64, armv7 and armv6 Linux targets (musl static).
# The helper does no networking and no TLS, so its dependency surface is a small
# subset of the agent's.
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "fmt",
    "env-filter",
    "ansi",
    "json",
    "registry",
] }
# Only the `process` feature is needed (geteuid); no `system`/uname here.
rustix = { version = "1", features = ["process"] }
tempfile = "3"
# Async-signal-safe SIGINT/SIGTERM handling for graceful shutdown. Pure-Rust
# (FFI bindings only); the registered handler only sets an AtomicBool.
signal-hook = { version = "0.3", default-features = false }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
